--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {deps_dir, ["deps"]}.
 
 {deps, [
-    {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {tag, "0.14.11"}}},
+    {jiffy, "1.0.4"},
     {hackney, "1.16.0"}
 ]}.
 
